@@ -5,9 +5,14 @@
 	* util/grub-emu.c (ENABLE_RELOCATABLE): New definition.
 	(grub_arch_modules_addr): Return 0 and not NULL.
 	* util/misc.c (ENABLE_RELOCATABLE): New definition.
-	(xstrdup): USe newstr instead of dup.
+	(xstrdup): Use newstr instead of dup.
 	* util/hostdisk.c (grub_util_biosdisk_get_grub_dev): Rename one instance
 	of disk to dsk to avoid shadowing.
+	(find_free_slot): Fix prototype.
+	* util/getroot.c (grub_util_is_dmraid): Make static.
+	* include/grub/time.h (grub_get_rtc) [GRUB_MACHINE_EMU || GRUB_UTIL]:
+	Add missing prototype.
+	* util/sdl.c (grub_video_sdl_set_viewport): Remove.
 
 2010-02-07  Vladimir Serbinenko  <phcoder@gmail.com>
 
